# ASTRA-LM

./: .gitignore  BUILD.md  README.md  VayuSphere- A Hyperspherical Centroid Adapter for Query-Key Modulation in Low-Resource Decoder Transformers.docx  comparison_results.csv  pyproject.toml  requirements.txt
.agents/: AGENTS.md
configs/model/: astra_mini_80m.yaml  astra_nano_6gb.yaml  gpt_nano_6gb.yaml  gpt_small_colab_t4.yaml  prism_gqa_baseline.yaml  vayusphere_block_nano_6gb.yaml  (+2 more)
configs/train/: smoke.yaml  (+8 more)
doc/: VAYUSPHERE_BLOCK_GUIDE.md  ablation_report.md  ablation_results.csv
notebooks/: analyze_experiments.ipynb  analyze_experiments_00.ipynb  astra_lm_cloud_training.ipynb
scripts/: ablate_v2.py  ablate_vayusphere.py  benchmark_vayusphere_block.py  compare_chakra_vs_gqa.py  compare_gpt_vs_vayusphere.py  generate.py  prepare_gpt2_pretrain_data.py  reevaluate_checkpoints.py  run_detailed_experiments.ps1  smoke_forward.py  smoke_vayusphere_block.py  train.py  train_kd.py  tune_batch_size.py
tests/: __init__.py  test_bucket_assignment_deterministic.py  test_causal_mask.py  test_chakra_candidate_mask.py  test_checkpoint_resume.py  test_initialization_loss.py  test_kd_harden.py  test_local_window_always_included.py  test_no_future_leakage.py  test_one_training_step.py  test_sdpa_attention.py  test_shapes.py  test_sphere_bucket_correctness.py  test_sphere_bucket_memory.py  test_vayusphere_block_attention.py  test_vayusphere_block_kd_smoke.py  test_vayusphere_block_triton.py  test_vayusphere_equivalence.py  test_vayusphere_fair_init.py  test_vayusphere_parity.py
(+39 files in other folders)
