[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-lm"
version = "0.1.0"
description = "Adaptive Spherical Transformer for Reasoning Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentencepiece",
    "numpy",
    "tqdm",
    "pyyaml",
    "datasets",
    "triton>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
